--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -63,6 +63,7 @@
   "config_logging_remove": "{emote_success} Successfully removed logging for `{part}` from {channel}",
   "config_logging_invalid_channel": "{emote_fail} Cannot resolve `{channel_name}` as a valid channel!",
   "config_logging_unable_to_send_messages": "{emote_fail} Cannot post messages in that channel",
+  "config_logging_all_confirm": "{emote_warn} Are you sure you want to add all logging types to <#{channel_id}>? This will begin to log all actions in the selected channel.",
 
   "config_mute_success": "{emote_success} Successfully updated the mute role",
   "config_mute_missing_args": "{emote_warn} Missing required argument `role`",
@@ -133,6 +134,17 @@
   "automod_enabled": "{emote_success} Enabled the automod",
   "automod_disabled": "{emote_success} Disabled the automod",
   "automod_disabled_feature": "{emote_success} Disabled `{part}`",
+
+  "automod_violation_max_messages_reason": "Violated `MAX_MESSAGES` check in #{channel_name} ({amount}/{limit}s)",
+  "automod_violation_max_messages_log": "{emote_warn} **{target_tag}** `({target_id})` has violated the `MAX_MESSAGES` check in <#{channel_id}>. Messages ({amount}/{limit}s)",
+  "automod_violation_max_mentions_reason": "Violated `MAX_MESASGES` check in #{channel_name} ({amount}/{limit}s)",
+  "automod_violation_max_mentions_log": "{emote_warn} **{target_tag}** `({target_id})` has violated the `MAX_MENTIONS` check in <#{{channel_id}>. Mentions ({amount}/{limit}s)",
+  "automod_violation_words_reason": "Violated `FORBIDDEN_WORDS` check in #{channel_name}",
+  "automod_violation_words_log": "{emote_warn} **{target_tag}** `({target_id})` has violated the `FORBIDDEN_WORDS` check in <#{channel_id}> | Punishment: **{punishment}**\n**Blacklisted words:** `{words}`\n```{message}```",
+  "automod_violation_invites_reason": "Violated `DISCORD_INVITE` check in #{channel_name}",
+  "automod_violation_invites_log": "{emote_warn} **{target_tag}** `({target_id})` has violated the `DISCORD_INVITE` check in <#{channel_id}> | Punishment: **{punishment}**\n```{message}```",
+  "automod_violation_website_reason": "Violated `FORBIDDEN_WEBSITE` check in #{channel_name}",
+  "automod_violation_website_log": "{emote_warn} **{target_tag}** `({target_id})` has violated the `FORBIDDEN_WEBSITE` check in <#{channel_id}> | Punishment: **{punishment}**\n```{message}```",
 
   "help_command_not_found": "Unable to find any commands with that name",
 
