--- a/src/languages/en-US-new.json
+++ b/src/languages/en-US-new.json
@@ -9,7 +9,8 @@
     "user": "user",
     "role": "role",
     "channel": "channel",
-    "lang": "language"
+    "lang": "language",
+    "cmd": "command"
   },
 
   "global_mod_action_log": "{{action}} by: {{moderator.tag}} ({{moderator.id}}) | Target: {{target.tag}} ({{target.id}} | Reason: {{reason}})",
@@ -90,6 +91,23 @@
 
   "config_autorole_success": "{{emote_success}} Successfully changed the autorole to {{role}}",
   "config_autorole_disable": "{{emote_success}} Successfully disabled the autorole",
+
+  "override_clearance_less_than_0": "{{emote_warn}} Clearance level cannot be less than or equal to **0**",
+  "override_clearance_more_than_100": "{{emote_warn}} Clearance level cannot be higher than **100**",
+  "override_clearance_higher_than_self": "{{emote_warn}} You cannot create an override with clearance level higher than your clearance level.",
+
+  "override_nonexistent_command": "{{emote_fail}} No command override with the name of `{{name}}` was found! You need to create an override first in order to edit it.",
+  "override_nonexistent_role": "{{emote_fail}} No role override for the {{role}} Role was found. You need to create an override first in order to edit it.",
+
+  "override_crate_success": "{{emote_success}} Successfully crated an override with clearance level of `{{clearance}}`",
+  "override_already_exists": "{{emote_fail}} An override with that name already exists!",
+
+  "override_disable_success": "{{emote_success}} Successfully disabled command `{{command}}`",
+  "override_enable_success": "{{emote_success}} Successfully enabled command `{{command}}`",
+
+  "override_edit_success": "{{emote_success}} Successfully updated the override with a new clearance level of `{{clearance}}`",
+
+  "override_remove_success": "{{emote_success}} Successfully removed the selected override.",
 
   "ping_latency": "Bot latency is **{{latency_bot}}ms**\nWebSocket latency is **{{latency_ws}}ms**"
 }
